fix: requests getting is now performed in repository